--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
-	name: Anthony Perri, Engineer
-	markdown: kramdown
+name: Hank Quinlan, Horrible Cop
+markdown: kramdown
+permalink: /blog/:year/:month/:day/:title
